--- a/assets/language/text.json
+++ b/assets/language/text.json
@@ -26,6 +26,7 @@
       "miscellaneous_expense": "雑費",
       "save": "保存",
       "cancel": "キャンセル",
+      "confirm":"確認",
       "work_place": "勤務地",
       "add_work_place": "勤務地を追加",
       "language": "言語",
@@ -53,7 +54,58 @@
       "september": "9月",
       "october": "10月",
       "november": "11月",
-      "december": "12月"
+      "december": "12月",
+      "Settings" : "設定",
+      "Calendar":"カレンダー",
+      "Pie": "パイ",
+      "Summary" :"概要",
+      "Admin": "管理者",
+      "Hourly incomes" : "時給",
+      "One time incomes" : "一時所得",
+      "One time expenses" : "一時的な出費",
+      "Shifts": "シフト",
+      "Other settings" : "その他の設定",
+      "delete_hourly_incomes_msg" : "時給カテゴリを削除しますか?\n\nこれにより、関連するイベントがすべて削除されます",
+      "delete_one_time_incomes_msg" :"一時所得カテゴリを削除しますか?\n\nこれにより、関連するイベントがすべて削除されます",
+      "delete_intervals_msg" : "間隔を削除しますか?\n\nこれにより、関連するイベントがすべて削除されます",
+      "delete_one_time_expense_msg": "1 回限りの経費を削除しますか?\n\nこれにより、関連するイベントがすべて削除されます",
+      "delete_event" : "イベントを削除しますか?",
+      "sound":"音",
+      "theme":"テーマ",
+      "notifications":"通知",
+      "on":"オン",
+      "off":"オフ",
+      "LIGHT":"ライト",
+      "DARK":"暗い",
+      "en":"英語",
+      "ja":"日本語",
+      "hourly":"毎時",
+      "one_time":"1 回",
+      "add_expense":"経費を追加",
+      "add_income":"収入を追加",
+      "select_expense":"1 回限りの経費を選択",
+      "select_hourly_income":"時給を選択",
+      "select_interval":"間隔を選択",
+      "select_one_time_income":"一時所得を選択",
+      "amount":"額",
+      "enter_note":"メモを入力してください",
+      "Date":"日付", 
+      "Amount_Rate":"金額/レート", 
+      "Description":"説明", 
+      "Total":"合計",
+      "Category":"カテゴリ", 
+      "Amount":"金額",  
+      "Note":"メモ",
+      "3 mo":"3月",
+      "6 mo":"6月",
+      "12 mo":"12月",
+      "All":"全て",
+      "Month_Year":"月/年",
+      "Income":"所得",
+      "Expense":"費用",
+      "updated" : "更新しました",
+      "event_added":"イベント追加",
+      "event_deleted":"イベントが削除されました"
     },
     "en": {
       "balance": "Balance",
@@ -82,6 +134,7 @@
       "miscellaneous_expense": "miscellaneous expense",
       "save": "save",
       "cancel": "cancel",
+      "confirm":"confirm",
       "work_place": "work place",
       "add_work_place": "add work place",
       "language": "language",
@@ -109,7 +162,58 @@
       "september": "September",
       "october": "October",
       "november": "November",
-      "december": "December"
+      "december": "December",
+      "Settings" : "Settings",
+      "Calendar":"Calendar",
+      "Pie": "Pie",
+      "Summary" :"Summary",
+      "Admin": "Admin",
+      "Hourly incomes" : "Hourly incomes",
+      "One time incomes" : "One time incomes",
+      "One time expenses" : "One time expenses",
+      "Shifts": "Shifts",
+      "Other settings" : "Other settings",
+      "delete_hourly_incomes_msg" : "Delete hourly income category?\n\nThis will delete all related events",
+      "delete_one_time_incomes_msg" :"Delete one time income category?\n\nThis will delete all related events",
+      "delete_intervals_msg" :"Delete interval?\n\nThis will delete all related events",
+      "delete_one_time_expense_msg": "Delete one time expense?\n\nThis will delete all related events",
+      "delete_event" : "Delete event?",
+      "sound":"sound",
+      "theme":"theme",
+      "notifications":"notifications",
+      "on":"on",
+      "off":"off",
+      "LIGHT":"light",
+      "DARK":"dark",
+      "en":"en",
+      "ja":"ja",
+      "hourly":"Hourly",
+      "one_time":"One time",
+      "add_expense":"Add expense",
+      "add_income":"Add income",
+      "select_expense":"Select a One Time expense",
+      "select_hourly_income":"Select a Hourly Income",
+      "select_interval":"Select an Interval",
+      "select_one_time_income":"Select an One Time income",
+      "amount":"amount",
+      "enter_note":"Enter note",
+      "Date":"Date", 
+      "Amount_Rate":"Amount/Rate", 
+      "Description":"Description", 
+      "Total":"Total",
+      "Category":"Category", 
+      "Amount":"Amount",  
+      "Note":"Note",
+      "3 mo":"3",
+      "6 mo":"6",
+      "12 mo":"12",
+      "All":"All",
+      "Month_Year":"Month_Year",
+      "Income":"Income",
+      "Expense":"Expense",
+      "updated" : "updated",
+      "event_added":"Event added",
+      "event_deleted":"Event deleted"
     }
   }
   
